gccida/c2/subst_asm_stack_regs
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/subst_asm_stack_regs/src/reg-stack.c:2350:6: error: use of undeclared identifier 'v23'
rtx *v23; // r12 
     ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/subst_asm_stack_regs/src/reg-stack.c:2352:6: error: use of undeclared identifier 'v25'
rtx *v25; // rax 
     ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/subst_asm_stack_regs/src/reg-stack.c:2361:4: error: expected ';' after expression
rtx v34; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/subst_asm_stack_regs/src/reg-stack.c:2361:5: error: use of undeclared identifier 'v34'
rtx v34; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/subst_asm_stack_regs/src/reg-stack.c:2363:4: error: expected ';' after expression
rtx v36; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/subst_asm_stack_regs/src/reg-stack.c:2363:5: error: use of undeclared identifier 'v36'
rtx v36; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/subst_asm_stack_regs/src/reg-stack.c:2371:7: error: use of undeclared identifier 'v44'; did you mean 'v4'?
rtx **v44; // r10 
      ^~~
      v4
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/subst_asm_stack_regs/src/reg-stack.c:2331:10: note: 'v4' declared here
__int16 *v4; // r14 
         ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/subst_asm_stack_regs/src/reg-stack.c:2371:5: error: invalid operands to binary expression ('struct rtx_def *' and 'short')
rtx **v44; // r10 
~~~ ^~~~~
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/subst_asm_stack_regs/src/reg-stack.c:2373:4: error: expected ';' after expression
rtx v46; // rcx 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/subst_asm_stack_regs/src/reg-stack.c:2373:5: error: use of undeclared identifier 'v46'
rtx v46; // rcx 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/subst_asm_stack_regs/src/reg-stack.c:2377:8: error: use of undeclared identifier 'v50'
rtx ( *v50)[59]; // rcx 
       ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/subst_asm_stack_regs/src/reg-stack.c:2379:6: error: use of undeclared identifier 'v52'
rtx *v52; // rdx 
     ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/subst_asm_stack_regs/src/reg-stack.c:2384:4: error: expected ';' after expression
rtx v57; // rcx 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/subst_asm_stack_regs/src/reg-stack.c:2384:5: error: use of undeclared identifier 'v57'
rtx v57; // rcx 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/subst_asm_stack_regs/src/reg-stack.c:2388:8: error: use of undeclared identifier 'v61'
rtx ( *v61)[59]; // rcx 
       ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/subst_asm_stack_regs/src/reg-stack.c:2389:6: error: use of undeclared identifier 'v62'
rtx *v62; // rdx 
     ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/subst_asm_stack_regs/src/reg-stack.c:2394:4: error: expected ';' after expression
rtx v67; // rcx 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/subst_asm_stack_regs/src/reg-stack.c:2394:5: error: use of undeclared identifier 'v67'
rtx v67; // rcx 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/subst_asm_stack_regs/src/reg-stack.c:2401:4: error: expected ';' after expression
rtx v74; // rsi 
   ^
   ;
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/subst_asm_stack_regs/src/obj/reg-stack.o] Error 1
